[project]
name = "pyrtoolkit"
version = "0.0.1"
description = "Toolkit library for managing Python code and results in research"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Seiya Yamaguchi", email = "sei.rm0307@gmail.com" },
]
keywords = ["research", "utility"]
dependencies = [
    "toml",
]

[project.urls]
Repository = "https://github.com/Sy-Yamaguchi-cat/PyResearchToolkit"

[project.scripts]
save-meta = "pyrtoolkit.__main__:save_meta"
